--- a/src/style/banner.scss
+++ b/src/style/banner.scss
@@ -72,16 +72,16 @@
     .skip-left,
     .skip-center,
     .skip-right {
-      transition: transform .1s;
+      transition: none;
     }
     .skip-left {
-      transform: translateX(-110%) scale(.5, .5) translateY(5%);
+      transform: translateX(-110%) scale(.7, .7) translateY(5%);
     }
     .skip-center {
-      transform: translateX(-50%) scale(.7, .7);
+      transform: translateX(-50%) scale(.8, .8);
     }
     .skip-right {
-      transform: translateX(10%) scale(.5, .5) translateY(5%);
+      transform: translateX(10%) scale(.7, .7) translateY(5%);
     }
   }
   .prev-btn,
