--- a/src/style/footer.scss
+++ b/src/style/footer.scss
@@ -120,6 +120,7 @@
     border: 2px solid #cac8ca;
     box-shadow: 0 0 5px #aaa;
     overflow: auto;
+    z-index: 5;
     .list-head {
       position: relative;
       height: 4rem;
