--- a/src/style/head.scss
+++ b/src/style/head.scss
@@ -8,7 +8,8 @@ $netRed: #c62f2f;
   > img {
     height: 5rem;
     width: 22rem;
-    vertical-align:   middle; 
+    vertical-align: middle;
+    cursor: pointer;
   }
   label {
     display: inline-block;
