--- a/src/style/lyrics.scss
+++ b/src/style/lyrics.scss
@@ -1,4 +1,5 @@
 .lyrics-container {
+  position: relative;
   height: 73%;
   margin-top: 3rem;
   overflow-x: hidden;
@@ -11,7 +12,7 @@
       border-radius: 4px;
       background-color: #cecece;
       &:hover {
-        background-color: #8b8d93;
+        background-color: #aeaeae;
       }
   }
   p {
@@ -22,5 +23,12 @@
   }
   .now {
     color: #ededee;
+  }
+  .no-lyric {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    font-size: 14px;
   }
 }
