--- a/src/style/footer.scss
+++ b/src/style/footer.scss
@@ -178,8 +178,18 @@
         font-size: 1.3rem;
         line-height: 2.8rem;
         background-color: #fafafa;
+        cursor: pointer;
         &:hover {
           background-color: #ecedee;
+        }
+        .name,
+        .singer {
+          display: inline-block;
+          width: 10rem;
+          overflow-x: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          vertical-align: top;
         }
         .name {
           display: inline-block;
@@ -196,6 +206,9 @@
       }
       li:nth-child(even) {
         background-color: #f5f5f7;
+        &:hover {
+          background-color: #ecedee;
+        }
       }
     }
     .no-song {
@@ -204,6 +217,7 @@
       line-height: normal;
       color: #b0b0b0;
       span {
+        cursor: pointer;
         color: #000;
         text-decoration: underline;
       }
