finish singer component

--- a/src/style/footer.scss
+++ b/src/style/footer.scss
@@ -119,7 +119,7 @@
     background-color: #fff;
     border: 2px solid #cac8ca;
     box-shadow: 0 0 5px #aaa;
-    overflow: auto;
+    overflow-y: auto;
     z-index: 5;
     .list-head {
       position: relative;
