--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -24,5 +24,15 @@ body {
     left: 20rem;
     overflow-y: auto;
     background-color: #fafafa;
+    &::-webkit-scrollbar {
+      width: 8px;
+    }
+    &::-webkit-scrollbar-thumb {
+      border-radius: 4px;
+      background-color: #e1e1e2;
+      &:hover {
+        background-color: #cfcfd1;
+      }
+    }
   }
 }
