--- a/src/style/searchAlbum.scss
+++ b/src/style/searchAlbum.scss
@@ -1,28 +1,35 @@
-.search-singer-container {
-  .singer-list {
+.search-album-container {
+  .album-list {
+    img {
+      width: 4rem;
+      height: 4rem;
+      margin-right: 1rem;
+      vertical-align: middle;
+      border: 1px solid #e4e4e4;
+    }
     li {
       height: 6rem;
-      line-height: 6rem;
       padding: 0 3.5rem;
+      line-height: 6rem;
+      font-size: 13px;
       cursor: pointer;
-      img {
-        width: 4rem;
-        height: 4rem;
-        margin-right: 1rem;
-        vertical-align: middle;
-        border: 1px solid #e4e4e4;
-      }
-      .singer-name {
-        font-size: 13px;
+      .album-name {
+        display: inline-block;
+        width: 40rem;
+        margin-right: 20rem;   
       }
       .alias {
-        font-size: 13px;
+        font-size: 12px;
         color: #888;
+      }
+      .singer {
+        display: inline-block;
+        width: 40rem;
       }
       &:hover {
         background-color: #ecedee;
       }
-    } 
+    }
     li:nth-child(even) {
       background-color: #f5f5f7;
       &:hover {
