--- a/src/style/footer.scss
+++ b/src/style/footer.scss
@@ -121,6 +121,16 @@
     box-shadow: 0 0 5px #aaa;
     overflow-y: auto;
     z-index: 5;
+    &::-webkit-scrollbar {
+      width: 8px;
+    }
+    &::-webkit-scrollbar-thumb {
+      border-radius: 4px;
+      background-color: #e1e1e2;
+      &:hover {
+        background-color: #cfcfd1;
+      }
+    }
     .list-head {
       position: relative;
       height: 4rem;
