--- a/src/style/songList.scss
+++ b/src/style/songList.scss
@@ -11,8 +11,8 @@
     margin-right: 2rem;
     border: 2px solid #ced6d7;
     img {
-      width: 100%;
-      height: 100%;
+      width: 20rem;
+      height: 20rem;
     }
   }
   .detail {
@@ -110,6 +110,7 @@
   li {
     height: 3rem;
     line-height: 3rem;
+    cursor: default;
     &:hover {
       background-color: #ecedee;
     }
@@ -170,6 +171,7 @@
     .album-name {
       width: 35rem;
       color: #777;
+      cursor: pointer;
     }
     .duration {
       width: 5rem;
@@ -192,4 +194,25 @@
       }
     }
   }
+}
+.loading {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 5rem;
+    text-align: center;
+    > p {
+      margin-top: 3rem;
+    }
+    .fa {
+      color: #c62f2f;
+      font-size: 30px;
+    }
+  }
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s
+}
+.fade-enter, .fade-leave-active {
+  opacity: 0
 }
