finish findmusic playlist

--- a/src/style/head.scss
+++ b/src/style/head.scss
@@ -123,6 +123,9 @@ $netRed: #c62f2f;
       vertical-align: middle;
       font-size: 1.6rem;
       color: #e7a8a3;
+      a {
+        color: #e7a8a3;
+      }
       .fa {
         vertical-align: middle;
         margin-left: 1.2rem;
