--- a/src/style/newSong.scss
+++ b/src/style/newSong.scss
@@ -35,6 +35,7 @@
       font-size: 13px;
       height: 6rem;
       line-height: 6rem;
+      cursor: default;
       &:hover {
         background-color: #ecedee;
       }
